<resources>
    <string name="card_number_not_correct">"Card number is not correct "</string>
    <string name="expire_data_notbe_past">You have incorrectly entered your expiration date</string>
    <string name="click_save_card">Click To Save Your Card</string>
    <string name="saved_card">Saved Cards</string>
    <string name="payment_method">Payment Methods</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="paynow">Pay Now</string>
    <string name="enter_carddetail">Enter card detail</string>
    <string name="title_activity_web_payment">WebPaymentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_delete">Please confirm if you don\'t want this payment method to be displayed in your payment options</string>
    <string name="payment_detail">Payment Details</string>
    <string name="reference_number">Reference Number : </string>
    <string name="Amount">"Amount : "</string>
    <string name="Gatway">"Gateway : "</string>
    <string name="transaction_successfull">"Congratulations your transfer was completed successfully"</string>
    <string name="transaction_fail">"sorry! your payment is failed \n please check your card detail."</string>
    <string name="Status">"Status : "</string>
    <string name="save_card_info">With saved card you can skip entering card detail in your next transactions</string>
    <string name="total_bill">Total</string>
    <string name="list_gatway">List of all gateways we support</string>
    <string name="list_card_saved">List of all cards saved</string>
    <string name="payment_fail">Payment Failed</string>
    <string name="thankyou">Thank You!</string>
    <string name="ok">Ok</string>
    <string name="loading">loading...</string>
    <string name="No">No</string>
    <string name="yes">Yes</string>
    <string name="name_card">Name On Card</string>
    <string name="card_number">Card Number</string>
    <string name="date_hint">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="debit_creditcard">Debit / Credit Card</string>
    <string name="expire_on">Expires on</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="will_applied"><font color='#FF000000'>will be applied</font></string>
    <string name="sub_total">Sub-Total</string>
    <string name="fee">Fee</string>
    <string name="close">Close</string>
    <string name="is_paid">is paid</string>
    <string name="confirm">Confirm</string>
    <string name="save_stc_acc">Save STC account</string>
    <string name="card_name_error">"Enter name of card holder "</string>
    <string name="enter_valid_cvv">Enter valid CVV</string>
    <string name="confirm_phone_number">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="pay">Pay</string>
    <string name="cant_send_otp">Couldn\'t send OTP</string>
    <string name="phone_number_notcorrect">Mobile number isn\'t correct</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="couldnt_verify_otp">Couldn\'t verify OTP</string>
    <string name="enter_mono">Please enter mobile number</string>

    <string name="title_payment_method">Payment Method</string>
    <string name="title_selected_payment_method">Select Payment Method</string>
    <string name="title_payment_details">Payment Details</string>
    <string name="title_amount">Amount</string>
    <string name="title_applied_fees">Applied Fees</string>
    <string name="title_total">Total</string>
    <string name="title_add_stc_number">Add STC Number</string>
    <string name="title_save_stc_number">Save My STC Pay Number</string>

    <string name="dialog_title_proccessing_payment">Processing Payment</string>
    <string name="dialog_title_payment_failed">Payment failed\nError occurred with payment</string>
    <string name="dialog_title_payment_success">Your Payment is done successfully!</string>

    <string name="dialog_message_proccessing_payment">Please wait while we process your payment</string>

    <string name="dialog_action_close">Close</string>
    <string name="dialog_action_try_again">Try Again</string>

    <string name="text_change">Change</string>
    <string name="text_add_number_description">Please enter your Phone No. below and we will text you the Confirmation Code</string>
    <string name="text_enter_otp_description">Enter the code we sent to</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_save_stc_number_description">Saved Numbers don’t require verification codes with each payment</string>
    <string name="text_otp_code_failure">OTP is invalid or expired.</string>
    <string name="text_not_get_otp_code">I didn’t get a code</string>
    <string name="text_resend">Resend</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_pay_with_value">Pay %1$s</string>

    <string name="text_phone_format" translatable="false">+965 %1$s %2$s</string>

    <string name="hint_cvv_code">CVV</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_otp_code" translatable="false">0000</string>

    <string name="placeholder_phone_number" translatable="false">xx xx xxx</string>

    <string name="args_phone_number" translatable="false">args_phone_number</string>

</resources>