<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:elevation="1dp"
                    android:id="@+id/progressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent1"
                    android:visibility="gone">

                    <ProgressBar
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/text_gray8"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/progress"/>

                </RelativeLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
               <RelativeLayout
                   android:layout_marginRight="5dp"
                   android:layout_marginLeft="5dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:textSize="18sp"
                       android:textColor="@color/black"
                       android:textStyle="bold"
                       android:fontFamily="@font/sfpro_regular"
                       android:text="@string/otp"
                       android:gravity="center"/>
                   <ImageView
                       android:id="@+id/back"
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:src="@drawable/arrow_back"
                       android:layout_centerVertical="true"
                       android:layout_alignParentLeft="true"/>
               </RelativeLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/moNumberEtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:hint="@string/enter_otp"
                        android:gravity="center"
                        android:fontFamily="@font/sfpro_bold"
                        android:textSize="20sp"
                        android:maxLength="6"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:background="@drawable/edittext_back"/>
                    <TextView
                        android:id="@+id/errorMsgText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/red"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_gray6"/>
            <TextView
                android:id="@+id/pay"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textSize="18dp"
                android:padding="15dp"
                android:fontFamily="@font/sfpro_bold"
                android:textColor="@color/text_black"
                android:orientation="horizontal"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>